--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,47 +4,47 @@
 
 @layer base {
   :root {
-    --background: 0 0% 98%;
-    --foreground: 240 10% 3.9%;
+    --background: 0 0% 100%;
+    --foreground: 224 71.4% 4.1%;
     --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --card-foreground: 224 71.4% 4.1%;
     --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
+    --popover-foreground: 224 71.4% 4.1%;
     --primary: 221 83% 53%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
+    --secondary: 215 27.9% 95.1%;
+    --secondary-foreground: 224 71.4% 4.1%;
+    --muted: 215 20.2% 65.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 215 27.9% 95.1%;
+    --accent-foreground: 224 71.4% 4.1%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
+    --border: 215 20.2% 92.1%;
+    --input: 215 20.2% 92.1%;
     --ring: 221 83% 53%;
     --radius: 0.8rem;
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 224 71.4% 4.1%;
     --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
+    --card: 224 71.4% 4.1%;
     --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
+    --popover: 224 71.4% 4.1%;
     --popover-foreground: 0 0% 98%;
     --primary: 217 91% 60%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 240 3.7% 15.9%;
+    --secondary: 215 27.9% 11.2%;
     --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
+    --muted: 215 27.9% 11.2%;
+    --muted-foreground: 217.9 10.6% 64.9%;
+    --accent: 215 27.9% 11.2%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
+    --border: 215 27.9% 11.2%;
+    --input: 215 27.9% 11.2%;
     --ring: 217 91% 60%;
   }
 }
@@ -55,5 +55,8 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  .card {
+    @apply rounded-2xl shadow-lg border-0 bg-card;
   }
 }
